@@ -2,7 +2,8 @@
 			   ==============
 
 * FIXED: PceEmacs: failing bracket highlighting on syntax errors.  Enhanced
-  ->beginning_of_clause to be more careful with in-clause comments.
+  ->beginning_of_clause to be more careful with in-clause comments.  Fixed
+  ->backward_clause on directives.
 
 
 VERSION 6.6.9, distributed with SWI-Prolog 5.6.9
